unit testing and redis config